Send current rectangle position from client to server

--- a/crates/flimflam-server/Cargo.toml
+++ b/crates/flimflam-server/Cargo.toml
@@ -5,3 +5,6 @@ name = "flimflam-server"
 version = "0.1.0"
 
 [dependencies]
+anyhow = "1.0.36"
+flimflam-model = {path = "../flimflam-model"}
+jsonl = "1.0.0"
