--- a/crates/flimflam-server/Cargo.toml
+++ b/crates/flimflam-server/Cargo.toml
@@ -7,5 +7,6 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.36"
 flimflam-model = {path = "../flimflam-model"}
+flimflam-utils = {path = "../flimflam-utils"}
 jsonl = "1.0.0"
 parking_lot = "0.11.1"
