--- a/crates/flimflam/Cargo.toml
+++ b/crates/flimflam/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.36"
 flimflam-model = {path = "../flimflam-model"}
+flimflam-utils = {path = "../flimflam-utils"}
 flume = "0.10.0"
 ggez = "0.5.1"
 jsonl = "1.0.0"
